WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
263662
REGRESSION(iOS17): fast/forms/listbox-bidi-align.html is constantly failing.
https://bugs.webkit.org/show_bug.cgi?id=263662
Summary
REGRESSION(iOS17): fast/forms/listbox-bidi-align.html is constantly failing.
Ben Schwartz
Reported
2023-10-25 09:05:08 PDT
fast/forms/listbox-bidi-align.html This test is constantly failing on iOS 17. HISTORY:
https://results.webkit.org/?suite=layout-tests&test=fast%2Fforms%2Flistbox-bidi-align.html&platform=ios
TEXT DIFF: RenderBR {BR} at (614,0) size 1x19 RenderText {#text} at (0,20) size 438x19 text run at (0,20) width 438: "All the items in the following select elements should be left-aligned." - RenderTable {TABLE} at (0,40) size 638x52 - RenderTableSection {TBODY} at (0,0) size 638x52 - RenderTableRow {TR} at (0,2) size 638x23 + RenderTable {TABLE} at (0,40) size 666x52 + RenderTableSection {TBODY} at (0,0) size 666x52 + RenderTableRow {TR} at (0,2) size 666x23 RenderTableCell {TD} at (2,2) size 160x23 [r=0 c=0 rs=1 cs=1] RenderMenuList {SELECT} at (1,2) size 158x20 [color=#007AFF] [bgcolor=#E9E9EA] [border: (1px solid #FFFFFF)] RenderBlock (anonymous) at (6,3) size 146x14 RenderText at (0,0) size 0x14 text run at (0,0) width 0: " " - RenderTableCell {TD} at (164,2) size 154x23 [r=0 c=1 rs=1 cs=1] - RenderMenuList {SELECT} at (1,2) size 152x20 [color=#007AFF] [bgcolor=#E9E9EA] [border: (1px solid #FFFFFF)] - RenderBlock (anonymous) at (6,3) size 140x14 + RenderTableCell {TD} at (164,2) size 168x23 [r=0 c=1 rs=1 cs=1] + RenderMenuList {SELECT} at (1,2) size 166x20 [color=#007AFF] [bgcolor=#E9E9EA] [border: (1px solid #FFFFFF)] + RenderBlock (anonymous) at (6,3) size 154x14 RenderText at (0,0) size 0x14 text run at (0,0) width 0: " " - RenderTableCell {TD} at (320,2) size 160x23 [r=0 c=2 rs=1 cs=1] + RenderTableCell {TD} at (334,2) size 160x23 [r=0 c=2 rs=1 cs=1] RenderMenuList {SELECT} at (1,2) size 158x20 [color=#007AFF] [bgcolor=#E9E9EA] [border: (1px solid #FFFFFF)] RenderBlock (anonymous) at (6,3) size 146x14 RenderText at (146,0) size 0x14 text run at (146,0) width 0 RTL: " " - RenderTableCell {TD} at (482,2) size 154x23 [r=0 c=3 rs=1 cs=1] - RenderMenuList {SELECT} at (1,2) size 152x20 [color=#007AFF] [bgcolor=#E9E9EA] [border: (1px solid #FFFFFF)] - RenderBlock (anonymous) at (6,3) size 140x14 - RenderText at (140,0) size 0x14 - text run at (140,0) width 0 RTL: " " - RenderTableRow {TR} at (0,27) size 638x23 + RenderTableCell {TD} at (496,2) size 168x23 [r=0 c=3 rs=1 cs=1] + RenderMenuList {SELECT} at (1,2) size 166x20 [color=#007AFF] [bgcolor=#E9E9EA] [border: (1px solid #FFFFFF)] + RenderBlock (anonymous) at (6,3) size 154x14 + RenderText at (154,0) size 0x14 + text run at (154,0) width 0 RTL: " " + RenderTableRow {TR} at (0,27) size 666x23 RenderTableCell {TD} at (2,27) size 160x23 [r=1 c=0 rs=1 cs=1] RenderMenuList {SELECT} at (1,2) size 158x20 [color=#007AFF] [bgcolor=#E9E9EA] [border: (1px solid #FFFFFF)] RenderBlock (anonymous) at (6,3) size 146x14 RenderText at (0,0) size 0x14 text run at (0,0) width 0: " " - RenderTableCell {TD} at (164,27) size 154x23 [r=1 c=1 rs=1 cs=1] - RenderMenuList {SELECT} at (1,2) size 152x20 [color=#007AFF] [bgcolor=#E9E9EA] [border: (1px solid #FFFFFF)] - RenderBlock (anonymous) at (6,3) size 140x14 + RenderTableCell {TD} at (164,27) size 168x23 [r=1 c=1 rs=1 cs=1] + RenderMenuList {SELECT} at (1,2) size 166x20 [color=#007AFF] [bgcolor=#E9E9EA] [border: (1px solid #FFFFFF)] + RenderBlock (anonymous) at (6,3) size 154x14 RenderText at (0,0) size 0x14 text run at (0,0) width 0: " " RenderBlock (anonymous) at (0,92) size 784x20 RenderText {#text} at (0,0) size 447x19 text run at (0,0) width 447: "All the items in the following select elements should be right-aligned." - RenderTable {TABLE} at (0,112) size 630x52 - RenderTableSection {TBODY} at (0,0) size 630x52 - RenderTableRow {TR} at (0,2) size 630x23 + RenderTable {TABLE} at (0,112) size 652x52 + RenderTableSection {TBODY} at (0,0) size 652x52 + RenderTableRow {TR} at (0,2) size 652x23 RenderTableCell {TD} at (2,2) size 167x23 [r=0 c=0 rs=1 cs=1] RenderMenuList {SELECT} at (1,2) size 165x20 [color=#007AFF] [bgcolor=#E9E9EA] [border: (1px solid #FFFFFF)] RenderBlock (anonymous) at (6,3) size 153x14 RenderText at (153,0) size 0x14 text run at (153,0) width 0 RTL: " " - RenderTableCell {TD} at (171,2) size 143x23 [r=0 c=1 rs=1 cs=1] - RenderMenuList {SELECT} at (1,2) size 141x20 [color=#007AFF] [bgcolor=#E9E9EA] [border: (1px solid #FFFFFF)] - RenderBlock (anonymous) at (6,3) size 129x14 - RenderText at (129,0) size 0x14 - text run at (129,0) width 0 RTL: " " - RenderTableCell {TD} at (316,2) size 167x23 [r=0 c=2 rs=1 cs=1] + RenderTableCell {TD} at (171,2) size 154x23 [r=0 c=1 rs=1 cs=1] + RenderMenuList {SELECT} at (1,2) size 152x20 [color=#007AFF] [bgcolor=#E9E9EA] [border: (1px solid #FFFFFF)] + RenderBlock (anonymous) at (6,3) size 140x14 + RenderText at (140,0) size 0x14 + text run at (140,0) width 0 RTL: " " + RenderTableCell {TD} at (327,2) size 167x23 [r=0 c=2 rs=1 cs=1] RenderMenuList {SELECT} at (1,2) size 165x20 [color=#007AFF] [bgcolor=#E9E9EA] [border: (1px solid #FFFFFF)] RenderBlock (anonymous) at (6,3) size 153x14 RenderText at (153,0) size 0x14 text run at (153,0) width 0 RTL: " " - RenderTableCell {TD} at (485,2) size 143x23 [r=0 c=3 rs=1 cs=1] - RenderMenuList {SELECT} at (1,2) size 141x20 [color=#007AFF] [bgcolor=#E9E9EA] [border: (1px solid #FFFFFF)] - RenderBlock (anonymous) at (6,3) size 129x14 - RenderText at (129,0) size 0x14 - text run at (129,0) width 0 RTL: " " - RenderTableRow {TR} at (0,27) size 630x23 + RenderTableCell {TD} at (496,2) size 154x23 [r=0 c=3 rs=1 cs=1] + RenderMenuList {SELECT} at (1,2) size 152x20 [color=#007AFF] [bgcolor=#E9E9EA] [border: (1px solid #FFFFFF)] + RenderBlock (anonymous) at (6,3) size 140x14 + RenderText at (140,0) size 0x14 + text run at (140,0) width 0 RTL: " " + RenderTableRow {TR} at (0,27) size 652x23 RenderTableCell {TD} at (2,27) size 167x23 [r=1 c=0 rs=1 cs=1] RenderMenuList {SELECT} at (1,2) size 165x20 [color=#007AFF] [bgcolor=#E9E9EA] [border: (1px solid #FFFFFF)] RenderBlock (anonymous) at (6,3) size 153x14 RenderText at (0,0) size 0x14 text run at (0,0) width 0: " " - RenderTableCell {TD} at (171,27) size 143x23 [r=1 c=1 rs=1 cs=1] - RenderMenuList {SELECT} at (1,2) size 141x20 [color=#007AFF] [bgcolor=#E9E9EA] [border: (1px solid #FFFFFF)] - RenderBlock (anonymous) at (6,3) size 129x14 + RenderTableCell {TD} at (171,27) size 154x23 [r=1 c=1 rs=1 cs=1] + RenderMenuList {SELECT} at (1,2) size 152x20 [color=#007AFF] [bgcolor=#E9E9EA] [border: (1px solid #FFFFFF)] + RenderBlock (anonymous) at (6,3) size 140x14 RenderText at (0,0) size 0x14 text run at (0,0) width 0: " " RenderBlock (anonymous) at (0,164) size 784x20 RenderText {#text} at (0,0) size 456x19 text run at (0,0) width 456: "All the items in the following select elements should be center-aligned." - RenderTable {TABLE} at (0,184) size 668x27 - RenderTableSection {TBODY} at (0,0) size 668x27 - RenderTableRow {TR} at (0,2) size 668x23 + RenderTable {TABLE} at (0,184) size 696x27 + RenderTableSection {TBODY} at (0,0) size 696x27 + RenderTableRow {TR} at (0,2) size 696x23 RenderTableCell {TD} at (2,2) size 177x23 [r=0 c=0 rs=1 cs=1] RenderMenuList {SELECT} at (1,2) size 175x20 [color=#007AFF] [bgcolor=#E9E9EA] [border: (1px solid #FFFFFF)] RenderBlock (anonymous) at (6,3) size 163x14 RenderText at (163,0) size 0x14 text run at (163,0) width 0 RTL: " " - RenderTableCell {TD} at (181,2) size 152x23 [r=0 c=1 rs=1 cs=1] - RenderMenuList {SELECT} at (1,2) size 150x20 [color=#007AFF] [bgcolor=#E9E9EA] [border: (1px solid #FFFFFF)] - RenderBlock (anonymous) at (6,3) size 138x14 - RenderText at (138,0) size 0x14 - text run at (138,0) width 0 RTL: " " - RenderTableCell {TD} at (335,2) size 177x23 [r=0 c=2 rs=1 cs=1] + RenderTableCell {TD} at (181,2) size 166x23 [r=0 c=1 rs=1 cs=1] + RenderMenuList {SELECT} at (1,2) size 164x20 [color=#007AFF] [bgcolor=#E9E9EA] [border: (1px solid #FFFFFF)] + RenderBlock (anonymous) at (6,3) size 152x14 + RenderText at (152,0) size 0x14 + text run at (152,0) width 0 RTL: " " + RenderTableCell {TD} at (349,2) size 177x23 [r=0 c=2 rs=1 cs=1] RenderMenuList {SELECT} at (1,2) size 175x20 [color=#007AFF] [bgcolor=#E9E9EA] [border: (1px solid #FFFFFF)] RenderBlock (anonymous) at (6,3) size 163x14 RenderText at (0,0) size 0x14 text run at (0,0) width 0: " " - RenderTableCell {TD} at (514,2) size 152x23 [r=0 c=3 rs=1 cs=1] - RenderMenuList {SELECT} at (1,2) size 150x20 [color=#007AFF] [bgcolor=#E9E9EA] [border: (1px solid #FFFFFF)] - RenderBlock (anonymous) at (6,3) size 138x14 + RenderTableCell {TD} at (528,2) size 166x23 [r=0 c=3 rs=1 cs=1] + RenderMenuList {SELECT} at (1,2) size 164x20 [color=#007AFF] [bgcolor=#E9E9EA] [border: (1px solid #FFFFFF)] + RenderBlock (anonymous) at (6,3) size 152x14 RenderText at (0,0) size 0x14 text run at (0,0) width 0: " " RenderBlock (anonymous) at (0,211) size 784x20 RenderText {#text} at (0,0) size 296x19 text run at (0,0) width 296: "The following tables check mixed alignments." - RenderTable {TABLE} at (0,231) size 710x27 - RenderTableSection {TBODY} at (0,0) size 710x27 - RenderTableRow {TR} at (0,2) size 710x23 + RenderTable {TABLE} at (0,231) size 744x27 + RenderTableSection {TBODY} at (0,0) size 744x27 + RenderTableRow {TR} at (0,2) size 744x23 RenderTableCell {TD} at (2,2) size 172x23 [r=0 c=0 rs=1 cs=1] RenderMenuList {SELECT} at (1,2) size 170x20 [color=#007AFF] [bgcolor=#E9E9EA] [border: (1px solid #FFFFFF)] RenderBlock (anonymous) at (6,3) size 158x14 @@ -122,13 +122,13 @@ RenderBlock (anonymous) at (6,3) size 158x14 RenderText at (0,0) size 0x14 text run at (0,0) width 0: " " - RenderTableCell {TD} at (350,2) size 178x23 [r=0 c=2 rs=1 cs=1] - RenderMenuList {SELECT} at (1,2) size 176x20 [color=#007AFF] [bgcolor=#E9E9EA] [border: (1px solid #FFFFFF)] - RenderBlock (anonymous) at (6,3) size 164x14 - RenderText at (164,0) size 0x14 - text run at (164,0) width 0 RTL: " " - RenderTableCell {TD} at (530,2) size 178x23 [r=0 c=3 rs=1 cs=1] - RenderMenuList {SELECT} at (1,2) size 176x20 [color=#007AFF] [bgcolor=#E9E9EA] [border: (1px solid #FFFFFF)] - RenderBlock (anonymous) at (6,3) size 164x14 + RenderTableCell {TD} at (350,2) size 195x23 [r=0 c=2 rs=1 cs=1] + RenderMenuList {SELECT} at (1,2) size 193x20 [color=#007AFF] [bgcolor=#E9E9EA] [border: (1px solid #FFFFFF)] + RenderBlock (anonymous) at (6,3) size 181x14 + RenderText at (181,0) size 0x14 + text run at (181,0) width 0 RTL: " " + RenderTableCell {TD} at (547,2) size 195x23 [r=0 c=3 rs=1 cs=1] + RenderMenuList {SELECT} at (1,2) size 193x20 [color=#007AFF] [bgcolor=#E9E9EA] [border: (1px solid #FFFFFF)] + RenderBlock (anonymous) at (6,3) size 181x14 RenderText at (0,0) size 0x14 text run at (0,0) width 0: " " DIFF URL:
https://build.webkit.org/results/Apple-iOS-17-Simulator-Release-WK2-Tests/269758@main%20(328)/fast/forms/listbox-bidi-align-pretty-diff.html
REPRODUCIBILITY: I was able to reproduce this issue on the iOS Simulator (17.0, 21A328/arm64) ToT using the following command: run-webkit-tests --ios-simulator --clobber-old-results --verbose fast/forms/listbox-bidi-align.html REGRESSION: This test has been constantly failing since the bring-up of iOS 17 testers at
268517@main
.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2023-10-25 09:05:33 PDT
<
rdar://problem/117478129
>
EWS
Comment 2
2023-10-25 09:25:38 PDT
Test gardening commit
269764@main
(d199ddf73363): <
https://commits.webkit.org/269764@main
> Reviewed commits have been landed. Closing PR #19542 and removing active labels.
ccarley2
Comment 3
2026-03-09 15:41:45 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/60221
EWS
Comment 4
2026-03-11 06:21:38 PDT
Committed
309054@main
(4f4eee548d96): <
https://commits.webkit.org/309054@main
> Reviewed commits have been landed. Closing PR #60221 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug