REGRESSION(iOS17): fast/forms/listbox-bidi-align.html is constantly failing. https://bugs.webkit.org/show_bug.cgi?id=263662 rdar://117478129

Reviewed by Anne van Kesteren.

There were a few issues here. First, there seems to have been some system change to font sizes.
Second, the new class SelectFallbackButtonElement was not properly setting the text alignment.
And similarly, the internal padding was not respecting the text alignment.

* LayoutTests/platform/ios/TestExpectations:
* LayoutTests/platform/ios/fast/forms/listbox-bidi-align-expected.txt:
* Source/WebCore/html/shadow/SelectFallbackButtonElement.cpp:
(WebCore::SelectFallbackButtonElement::resolveCustomStyle):
* Source/WebCore/rendering/ios/RenderThemeIOS.mm:
(WebCore::RenderThemeIOS::popupInternalPaddingBox const):

Canonical link: https://commits.webkit.org/309054@main