Source/WebCore/html/shadow/SelectFallbackButtonElement.cpp
@@ -35,6 +35,7 @@
 #include "RenderTheme.h"
 #include "ResolvedStyle.h"
 #include "StyleResolver.h"
+#include "StyleTextAlign.h"
 #include <wtf/TZoneMallocInlines.h>
 
 namespace WebCore {
@@ -76,10 +77,13 @@ std::optional<Style::UnadjustedStyle> SelectFallbackButtonElement::resolveCustom
     // min-width: 0; is needed for correct shrinking.
     style->setLogicalMinWidth(0_css_px);
 
-    // Set text-align based on the select's direction (not its text-align property).
-    // This matches the old RenderMenuList behavior where text-align followed the
-    // select's bidi direction, not its CSS text-align property.
-    style->setTextAlign(hostStyle->writingMode().isBidiLTR() ? Style::TextAlign::Left : Style::TextAlign::Right);
+    auto hostTextAlign = hostStyle->textAlign();
+    if (hostTextAlign == Style::TextAlign::Start)
+        style->setTextAlign(hostStyle->writingMode().isBidiLTR() ? Style::TextAlign::Left : Style::TextAlign::Right);
+    else if (hostTextAlign == Style::TextAlign::End)
+        style->setTextAlign(hostStyle->writingMode().isBidiLTR() ? Style::TextAlign::Right : Style::TextAlign::Left);
+    else
+        style->setTextAlign(hostTextAlign);
 
     // Apply direction and unicodeBidi from the selected option for proper bidirectional text rendering.
     Ref selectElement = this->selectElement();
